...
"action.title.autofill.logins" = "Passwords";

/* Confirmation of Add to Bookmarks action in Add All Open Tabs to Bookmarks alert */
"action.title.bookmark" = "Bookmark";

/* Button: Open bookmarks list */
"action.title.bookmarks" = "Bookmarks";

/* Cancel action - button shown in alert */
"action.title.cancel" = "Cancel";

/* Copy action */
"action.title.copy" = "Copy";

/* Floating message indicating URL has been copied */
"action.title.copy.message" = "URL copied";

/* Delete action - button shown in alert */
"action.title.delete" = "Delete";

/* Disable protection action */
"action.title.disable.protection" = "Disable Privacy Protection";

/* Downloads menu item opening the downlods list */
"action.title.downloads" = "Downloads";
...
"action.title.edit.bookmark" = "Edit Bookmark";

/* Enable protection action */
"action.title.enable.protection" = "Enable Privacy Protection";

/* No comment provided by engineer. */
"action.title.forgetAll" = "Close Tabs and Clear Data";

/* Confirmation message */
"action.title.forgetAllDone" = "Tabs and data cleared";

/* Open in New Background Tab action */
"action.title.newBackgroundTabForUrl" = "Open in Background";
...
"action.title.request.desktop.site" = "Desktop Site";

/* Action to reload current page in mobile mode */
"action.title.request.mobile.site" = "Mobile Site";

/* Save action - button shown in alert */
"action.title.save" = "Save";

/* Add to Bookmarks action */
"action.title.save.bookmark" = "Add Bookmark";

/* Add to Favorites action */
"action.title.save.favorite" = "Add Favorite";

/* Settings action */
"action.title.settings" = "Settings";
...
"data.import.passwords.title" = "Import Passwords to DuckDuckGo";

/* Data import summary of how many bookmarks were successfully imported. */
"data.import.summary.bookmarks.success" = "Bookmarks";

/* Title of button to dismiss the screen */
"data.import.summary.button.title.done" = "Done";

/* Title of button to prompt users to sync and back up their imported data. Reads as 'Sync & Back Up Passwords | Bookmarks | Data' depending on what the user has chosen to import */
"data.import.summary.button.title.sync" = "Sync & Back Up %@";

/* Parameter for autofill.import.passwords.complete.button.title.sync */
"data.import.summary.button.title.sync.bookmarks" = "Bookmarks";
...
"malicious-site-protection.settings.header" = "Site Safety Warnings";

/* Text explaining what happens when Malicious Site Protection is enabled */
"malicious-site-protection.settings.toggle.message" = "Warn me on sites flagged for phishing or malware";

/* No comment provided by engineer. */
"menu.button.hint" = "Browsing Menu";

/* Title for back button in navigation bar */
"navbar.back-button.title" = "Back";

/* Title for next button in navigation bar to progress forward */
"navbar.next-button.title" = "Next";
...
