...
/// A protocol that defines the delegate methods for `AIChatViewController`.
public protocol AIChatViewControllerDelegate: AnyObject {
    /// Tells the delegate that a request to load a URL has been made.
    ///
    /// - Parameters:
    ///   - viewController: The `AIChatViewController` instance making the request.
    ///   - url: The `URL` that is requested to be loaded.
    func aiChatViewController(_ viewController: AIChatViewController, didRequestToLoad url: URL)

    /// Tells the delegate that the `AIChatViewController` has finished its task.
    ///
    /// - Parameter viewController: The `AIChatViewController` instance that has finished.
    func aiChatViewControllerDidFinish(_ viewController: AIChatViewController)
...
