...
                <viewController storyboardIdentifier="BrowsingMenuViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="guL-1g-W6K" userLabel="BrowsingMenuViewController" customClass="BrowsingMenuViewController" customModule="DuckDuckGo" sceneMemberID="viewController">
                    <view key="view" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HSy-5d-3QF">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cLM-7K-NLL" userLabel="Background Tap Button">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <accessibility key="accessibilityConfiguration" identifier="browsingMenuBackground"/>
                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <buttonConfiguration key="configuration" style="plain"/>
                                <connections>
                                    <action selector="backgroundTapped:" destination="guL-1g-W6K" eventType="touchUpInside" id="8Sp-F6-keI"/>
                                </connections>
                            </button>
...
